@@ -113,6 +113,12 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProje
         list.add("--add-opens")
         list.add("java.base/java.lang=ALL-UNNAMED")
         list.add("--add-opens")
+        list.add("java.base/java.util=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/java.time=ALL-UNNAMED")
+        list.add("--add-opens")
+        list.add("java.base/java.net=ALL-UNNAMED")
+        list.add("--add-opens")
         list.add("java.base/sun.security.action=jdk.crypto.ec")
         list.add("--add-opens")
         list.add("java.base/java.nio=ALL-UNNAMED")
